# memos-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
codex-action/: 00-master-plan.md  01-overview.md  02-extra-rules.md  one-shot-command.md  phase-1-bootstrap-health-ci.md  phase-2-sqlite-migration-bootstrap-admin.md  phase-3-auth.md  phase-4-memo-crud.md  phase-5-static-frontend-hosting.md  phase-6-github-actions-release.md  phase-7-systemd-deployment-polish.md  progress.md
migrations/: 20260408160000_initial_schema.down.sql  20260408160000_initial_schema.up.sql  README.md
notes/: api-map.md  deployment-notes.md  feature-matrix.md  schema-notes.md
packaging/: config.toml  memos-rs.service
src/: app.rs  auth.rs  bootstrap.rs  cli.rs  config.rs  db.rs  error.rs  frontend.rs  main.rs  server.rs  state.rs
src/memo/: mod.rs
