[package]
name = "memos-rs"
version = "0.1.0"
edition = "2021"
description = "Rust backend foundation for a self-hostable Memos replacement"
license = "MIT"
publish = false

[dependencies]
argon2 = "0.5"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
jsonwebtoken = "9.3"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["migrate", "runtime-tokio-rustls", "sqlite"] }
thiserror = "2.0"
tokio = { version = "1.45", features = ["macros", "net", "rt-multi-thread", "signal"] }
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
tempfile = "3.15"
